--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -3,10 +3,10 @@
   grid-template-columns: auto 280px;
   height: 50px;
   background-color: $color-primary;
-  @include mq('sm') {
+  @include mq("sm") {
     grid-template-columns: auto 310px;
   }
-  @include mq('med') {
+  @include mq("med") {
     height: 70px;
   }
 }
@@ -20,10 +20,10 @@
     vertical-align: middle;
     padding-left: 15px;
     margin-right: 10px;
-    @include mq('sm') {
+    @include mq("sm") {
       @include txt-style($size: 20px);
     }
-    @include mq('med') {
+    @include mq("med") {
       @include txt-style($size: 25px);
     }
   }
@@ -31,9 +31,9 @@
 
 .user-detail {
   display: grid;
-  grid-template-columns: .1fr .1fr .1fr 1fr;
-  @include mq('lg') {
-    grid-template-columns: 1fr .1fr 1fr 4fr;
+  grid-template-columns: 0.1fr 0.1fr 0.1fr 1fr;
+  @include mq("lg") {
+    grid-template-columns: 1fr 0.1fr 1fr 4fr;
   }
 }
 
@@ -51,7 +51,7 @@
 .td {
   @include txt-style($font: $font-stack-ternary);
   @include txt-style($font: 10);
-  @include mq('sm') {
+  @include mq("sm") {
     @include txt-style($font: 14);
   }
 }
@@ -65,11 +65,11 @@
     margin: auto 25px;
     width: 1px;
     margin-top: 12px;
-   }
-  @include mq('med') {
+  }
+  @include mq("med") {
     margin-top: 10px;
     width: 1px;
-    height: 45px
+    height: 45px;
   }
 }
 
@@ -77,7 +77,7 @@
   @include txt-style($size: 16px, $color: $white) {
     vertical-align: middle;
   }
-  @include mq('med') {
+  @include mq("med") {
     @include txt-style($size: 18px, $color: $white) {
       margin: auto 10px;
     }
@@ -98,7 +98,7 @@
   animation-timing-function: linear;
   -webkit-animation-iteration-count: 2;
   animation-iteration-count: 2;
-  @include mq('med') {
+  @include mq("med") {
     margin-top: 20px;
     width: 27px;
     height: 27px;
@@ -109,7 +109,7 @@
   cursor: pointer;
   height: 22px;
   width: 22px;
-  @include mq('med') {
+  @include mq("med") {
     width: 30px;
     height: 30px;
   }
@@ -131,7 +131,7 @@
   -moz-animation: notfications-slide-down 0.5s ease-out;
   border: 1px solid rgba(0, 0, 0, 0.5);
   box-shadow: 0 6px 6px -6px rgba(0, 0, 0, 1);
-  @include mq('med') {
+  @include mq("med") {
     right: 260px;
     top: 75px;
   }
@@ -154,15 +154,14 @@
     top: 12px;
     right: 287px;
     height: 10px;
-    width:10px;
+    width: 10px;
     display: none;
     background-color: #81c98f;
-    
+
     @include mq("sm") {
       display: block;
     }
-    @include mq('med') {
-      
+    @include mq("med") {
       right: 285px;
       top: 17px;
       height: 12px;
@@ -208,4 +207,3 @@
 .notif-close:hover {
   cursor: pointer;
 }
-
